# pdf-a11y

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  structure_tag.py
pdf_a11y_remediator/: add_alt_text.py  alt_text_local.py  cli.py  extract_images.py
